--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "eslint-plugin-vue-libs": "^1.2.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "4.0.0-alpha.0",
     "file-loader": "^1.1.5",
     "gitbook-plugin-edit-link": "^2.0.2",
     "gitbook-plugin-github": "^3.0.0",
@@ -95,7 +95,7 @@
     "vue": "^2.5.0",
     "vue-server-renderer": "^2.5.0",
     "vue-template-compiler": "^2.5.0",
-    "webpack": "^3.0.0",
+    "webpack": "^4.0.0",
     "webpack-merge": "^4.1.1",
     "yorkie": "^1.0.3"
   }
