--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "raw-loader": "^0.5.1",
     "skeleton-loader": "1.1.3",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "stylus-loader": "arty-name/stylus-loader#master",
     "sugarss": "^1.0.0",
     "url-loader": "^0.6.2",
     "vue": "^2.5.0",
